Fixed remark Figure plugin: removed p tags wrapping img tags

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-header, article-meta, article-tags, article-footer, elt-data, elt-template, elt-post, elt-post-link {
+header, article-meta, article-tags, article-footer, elt-data, elt-template, elt-post, post-link {
     display: block;
 }
 
